--- a/index.html
+++ b/index.html
@@ -8,25 +8,19 @@
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-  <title>Weather week 7</title>
+  <title>Plus Final Project</title>
   <link rel="stylesheet" href="src/style.css" />
 </head>
 
 <body>
-  <div class="weather_forecast">
-    <!-- <div class="container">
-      <div class="row" class="city">
-        <div class="col-sm"><a href="#">Lisbon</a></div>
-        <div class="col-sm"><a href="#">Paris</a></div>
-        <div class="col-sm"><a href="#">Sydney</a></div>
-        <div class="col-sm"><a href="#">San Francisco</a></div>
-      </div>
-    </div> -->
+  <div class="weather-forecast">
+    <div class="container" id="favorite-сity">
+    </div>
     <form id="search-form" class="search_city">
       <div class="form-group">
         <div class="row">
           <div class="col-md-6 col-12">
-            <input id="city-input" type="text" class="form-control" placeholder="Enter a city" autocomplete="off" />
+            <input id="city-input" type="search" class="form-control" placeholder="Enter a city" autocomplete="off" />
           </div>
           <div class="col-md-2 col-12">
             <button type="submit" class="btn btn-primary" id="citySearch">Search</button>
@@ -63,12 +57,12 @@
             <ul>
               <li>
                 <h6>
-                  Humidity: <span id="humidity">67</span>%
+                  Humidity: <span id="humidity"></span>%
                 </h6>
               </li>
               <li>
                 <h6>
-                  Wind: <span id="wind">6.17</span> km/h
+                  Wind: <span id="wind"></span> km/h
                 </h6>
               </li>
             </ul>
@@ -79,55 +73,6 @@
 
     </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="col-sm">
-          <div class="day">
-            <h4>
-              Sun <br />
-              🌦<br />
-              18°
-            </h4>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="day">
-            <h4>
-              Mon <br />
-              🌤<br />
-              29°
-            </h4>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="day">
-            <h4>
-              Tue <br />
-              🌩<br />
-              25°
-            </h4>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="day">
-            <h4>
-              Wed <br />
-              ⛈<br />
-              24°
-            </h4>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="day">
-            <h4>
-              Thu <br />
-              ☀<br />
-              25°
-            </h4>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
   <br />
   <br />
